Make the daemon support multiple screens and monitor changes

https://bugzilla.gnome.org/show_bug.cgi?id=622552